# botender

./: .gitignore  .pre-commit-config.yaml  README.md  botender.py  environment.yml  pyproject.toml
botender/: botender.py  logging_utils.py  main.py  types.py  webcam_processor.py
botender/interaction/: drink_recommendation.py  gaze_coordinator.py  interaction.py  interaction_coordinator.py  interaction_generators.py  interaction_manager.py
botender/interaction/drinks/: drinks_with_categories_and_ranks.csv
botender/interaction/gestures/: __init__.py
botender/interaction/gestures/concern/: concern_1_iPhone.json  concern_2_iPhone.json  concern_3_iPhone.json  concern_4_iPhone.json  concern_5_iPhone.json  concern_6_iPhone.json  concern_7_iPhone.json
botender/interaction/gestures/happy/: Happy_1_iPhone.json  Happy_2_iPhone.json  Happy_3_iPhone.json  Happy_4_iPhone.json  Happy_5_iPhone.json  Happy_6_iPhone.json
botender/interaction/gestures/idle/: Idle_10_iPhone.json  (+9 more)
botender/perception/: detection_worker.py  perception.py  perception_manager.py
botender/perception/detectors/: __init__.py  emotion_detector.py  facial_expression_detector.py  speech_detector.py
docs/: README.md  _config.yml  about.md
docs/_posts/: 2023-11-21-First-Meeting.md  2023-11-21-Introduction-to-Botender.md  2023-11-23-System-Architecture.md  2023-11-25-The-Framework.md  2023-12-06-User-Perception.md  2023-12-08-Gaze-Controller.md  2023-12-09-Data-Analysis,-Model-Training-and-Evaluation.md  2023-12-12-Interaction-Component.md  2023-12-24-EmotionLearning.md  2024-01-05-BotenderGPT.md  2024-01-12-Project Finalisation.md
model-training/: analyse_pyfeat.ipynb  aus_combined.csv  aus_diffusion_fer.csv  aus_kaggle_set.csv  data_analysis_and_preprocessing.ipynb  fer_label_encoder.pkl  fer_model.pkl  fer_scaler.pkl  model_training.ipynb  model_training_and_evaluation.ipynb  nn_training_and_evaluation.ipynb  pca.pkl  predicted_labels.txt  scaler.pkl  svm_model.pkl  test.csv  test_wo_pca.csv  train.csv  train_wo_pca.csv  true_labels.txt
pages-doc/: README.md
src/: botender.py  interaction_thread.py  main.py  pyfeat_thread.py  webcam_processor.py  webcam_thread.py
(+28 files in other folders)
